# lumis

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LANGUAGES.md  README.md  THEMES.md  build.rs  fly.toml  justfile
.github/: dependabot.yml
.github/workflows/: deploy-website.yml  elixir-nif-release.yml  elixir-nif-rust.yml  elixir.yml  gen-css.yml  gen-samples.yml  gen-themes.yml  gen_css.yml  gen_samples.yml  gen_themes.yml  rust.yml  static.yml  update-langs.yml  update_langs.yml  update_parsers.yml  update_queries.yml
crates/autumnus/: Cargo.toml  README.md
crates/dev/src/: main.rs
crates/lumis/: CHANGELOG.md  Cargo.toml  build.rs
crates/lumis-sh/: Cargo.toml  build.rs
crates/lumis-sh/src/: main.rs  samples.rs
crates/lumis-sh/templates/: index.html
crates/lumis/css/: aura_dark.css  aura_dark_soft_text.css  aura_soft_dark.css  aura_soft_dark_soft_text.css  ayu_dark.css  ayu_light.css  bamboo_light.css  bamboo_vulgaris.css  catppuccin_frappe.css  catppuccin_latte.css  catppuccin_macchiato.css  cyberdream_dark.css  dawnfox.css  dracula.css  edge_light.css  everforest_light.css  flexoki_dark.css  github_dark_colorblind.css  github_dark_dimmed.css  github_light_high_contrast.css  github_light_tritanopia.css  gruvbox_light_soft.css  kanagawa_dragon.css  kanagawa_lotus.css  kanagawa_wave.css  material_deep_ocean.css  matte_black.css  melange_dark.css  melange_light.css  monokai_pro_spectrum.css  neovim_light.css  nord.css  nordic.css  onedark_darker.css  onedark_deep.css  onedarkpro_vivid.css  onelight.css  rosepine_dawn.css  solarized_summer_dark.css  vscode_dark.css  (+3 more)
crates/lumis/examples/: html_multi_themes_light_dark.rs  html_multi_themes_manual.rs  html_multi_themes_vars.rs
crates/lumis/queries/markdown/: injections.scm
crates/lumis/queries/wat/: highlights.scm
crates/lumis/src/: languages.rs  lib.rs  themes.rs
crates/lumis/src/formatter/: ansi.rs  html.rs  html_inline.rs  html_linked.rs  html_multi_themes.rs  mod.rs
crates/lumis/vendored_parsers/tree-sitter-vue/src/: grammar.json  node-types.json
css/: aura_dark.css  aura_dark_soft_text.css  aura_soft_dark.css  aura_soft_dark_soft_text.css  ayu_dark.css  ayu_light.css  ayu_mirage.css  bamboo_light.css  bamboo_multiplex.css  bamboo_vulgaris.css  bluloco_dark.css  bluloco_light.css  carbonfox.css  catppuccin_frappe.css  catppuccin_latte.css  catppuccin_macchiato.css  catppuccin_mocha.css  cyberdream_dark.css  cyberdream_light.css  darkplus.css  dawnfox.css  dayfox.css  dracula.css  dracula_soft.css  duskfox.css  edge_aura.css  edge_dark.css  edge_light.css  edge_neon.css  everforest_dark.css  everforest_light.css  flexoki_dark.css  flexoki_light.css  github_dark.css  github_dark_colorblind.css  github_dark_default.css  github_dark_dimmed.css  github_dark_high_contrast.css  github_dark_tritanopia.css  github_light.css  (+72 more)
examples/: auto_detect_language.rs  custom_formatter.rs  custom_html_formatter.rs  custom_terminal_formatter.rs  custom_theme.rs  highlighter_api.rs  html_multi_themes.html  html_multi_themes.rs  html_multi_themes_light_dark.html  html_multi_themes_light_dark.rs  html_with_classes.rs  iterator_api.rs  terminal_colors.rs
overwrites/elixir/: highlights.scm  injections.scm
queries/cmake/: highlights.scm
queries/elm/: highlights.scm
queries/fsharp/: highlights.scm
queries/html/: highlights.scm  injections.scm
queries/latex/: highlights.scm
queries/markdown_inline/: highlights.scm
queries/php_only/: highlights.scm
queries/sql/: highlights.scm
queries/vue/: highlights.scm
samples/: angular.aura_dark.html  angular.ayu_dark.html  angular.ayu_light.html  angular.catppuccin_frappe.html  angular.catppuccin_latte.html  angular.catppuccin_macchiato.html  angular.catppuccin_mocha.html  angular.cyberdream_dark.html  angular.cyberdream_light.html  angular.dracula.html  angular.dracula_soft.html  angular.edge_dark.html  angular.edge_light.html  angular.everforest_dark.html  angular.everforest_light.html  angular.github_dark.html  angular.github_light.html  angular.gruvbox_dark.html  angular.gruvbox_dark_hard.html  angular.gruvbox_dark_soft.html  angular.gruvbox_light.html  angular.gruvbox_light_hard.html  angular.gruvbox_light_soft.html  angular.horizon_dark.html  angular.horizon_light.html  angular.iceberg.html  angular.kanagawa_lotus.html  angular.kanagawa_wave.html  angular.material_lighter.html  angular.material_oceanic.html  angular.melange_dark.html  angular.melange_light.html  angular.molokai.html  angular.monokai_pro_dark.html  angular.monokai_pro_machine.html  angular.monokai_pro_ristretto.html  angular.monokai_pro_spectrum.html  angular.moonfly.html  angular.neovim_dark.html  angular.neovim_light.html  (+3254 more)
scripts/: langs.lua  themes.lua
src/: constants.rs  elixir.rs  highlight.rs  languages.rs  lib.rs  themes.rs
src/formatter/: ansi.rs  html.rs  html_inline.rs  html_linkded.rs  html_linked.rs  html_multi_themes.rs  mod.rs  terminal.rs
themes/: README.md  aura_dark.json  aura_dark_soft_text.json  aura_soft_dark.json  aura_soft_dark_soft_text.json  ayu_dark.json  ayu_light.json  ayu_mirage.json  bamboo_light.json  bamboo_multiplex.json  bamboo_vulgaris.json  bluloco_dark.json  bluloco_light.json  carbonfox.json  catppuccin_frappe.json  catppuccin_latte.json  catppuccin_macchiato.json  catppuccin_mocha.json  cyberdream_dark.json  cyberdream_light.json  darkplus.json  dawnfox.json  dayfox.json  dracula.json  dracula_soft.json  duskfox.json  edge_aura.json  edge_dark.json  edge_light.json  edge_neon.json  everforest_dark.json  everforest_light.json  extract_theme.lua  extract_themes.lua  flexoki_dark.json  flexoki_light.json  github_dark.json  github_dark_colorblind.json  github_dark_default.json  github_dark_dimmed.json  (+85 more)
vendored_parsers/tree-sitter-caddy/src/: grammar.json  node-types.json  parser.c
vendored_parsers/tree-sitter-csv/src/: grammar.json
vendored_parsers/tree-sitter-llvm/src/: grammar.json
vendored_parsers/tree-sitter-markdown_inline/src/: parser.c
