[package]
name = "autumnus"
version = "0.1.9"
homepage = "https://autumnus.dev"
repository = "https://github.com/leandrocp/autumnus"
authors = ["Leandro Pereira <leandro@leandro.io>"]
edition = "2021"
description = "Syntax highlighter powered by Tree-sitter and Neovim themes."
keywords = ["syntax", "highlighting", "highlighter", "colouring", "tree-sitter"]
categories = ["text-processing"]
license = "MIT"
include = [
  "/build.rs",
  "/src/",
  "/vendored_parsers/tree-sitter-*/src/tree_sitter/*.h",
  "/vendored_parsers/tree-sitter-*/src/*.h",
  "/vendored_parsers/tree-sitter-*/src/*.c",
  "/vendored_parsers/tree-sitter-*/src/*.cc",
  "/vendored_parsers/tree-sitter-csv/csv/src/tree_sitter/*.h",
  "/vendored_parsers/tree-sitter-csv/csv/src/*.c",
  "/vendored_parsers/tree-sitter-comment/src/tree_sitter_comment/*.h",
  "/vendored_parsers/tree-sitter-comment/src/tree_sitter_comment/*.c",
  "/queries/README.md",
  "/queries/**/highlights.scm",
  "/queries/**/injections.scm",
  "/queries/**/locals.scm",
  "/css/*.css",
  "/themes/*.json",
  "/LICENSE",
  "/README.md",
]

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]
no-default-features = true

[dependencies]
tree-sitter = "0.25.1"
tree-sitter-highlight = "0.25.1"
tree-sitter-language = "0.1.5"
tree-sitter-bash = "0.23.3"
tree-sitter-c = "0.23.4"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.23.2"
tree-sitter-diff = "0.1"
tree-sitter-elixir = "0.3"
tree-sitter-embedded-template = "0.23.2"
tree-sitter-erlang = "0.13.0"
tree-sitter-fsharp = "0.1.0"
tree-sitter-gleam = "1.0.0"
tree-sitter-go = "0.23.4"
tree-sitter-haskell = "0.23.1"
tree-sitter-heex = "0.8.1"
tree-sitter-html = "0.23.2"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.23.1"
tree-sitter-json = "0.24.8"
tree-sitter-lua = "0.2.0"
tree-sitter-md = "0.3.2"
tree-sitter-objc = "3.0.2"
tree-sitter-ocaml = "0.24.0"
tree-sitter-php = "0.23.11"
tree-sitter-proto = "0.2.0"
tree-sitter-python = "0.23.6"
tree-sitter-r = "1.1.0"
tree-sitter-regex = "0.24.3"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.0"
tree-sitter-scala = "0.23.4"
tree-sitter-sequel = "0.3.8"
tree-sitter-svelte-ng = "1.0.2"
tree-sitter-swift = "0.7.0"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-xml = "0.7.0"
tree-sitter-yaml = "0.7.0"
tree-sitter-zig = "1.1.2"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
lazy_static = "1.5"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }
termcolor = "1.4"
v_htmlescape = "0.15"

[build-dependencies]
cc = "1"
glob = "0.3"
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
rayon = "1"
syn = { version = "2.0", features = ["full", "parsing"] }

[features]
dev = []

[profile.release]
lto = true
strip = true

[[bin]]
name = "autumn"
path = "src/bin/autumn/main.rs"
doc = true

[[bin]]
name = "dev"
path = "src/bin/dev/main.rs"
required-features = ["dev"]
doc = false
