[package]
name = "autumnus"
version = "0.5.0"
homepage = "https://autumnus.dev"
repository = "https://github.com/leandrocp/autumnus"
authors = ["Leandro Pereira <leandro@leandro.io>"]
edition = "2021"
rust-version = "1.86.0"
description = "Syntax highlighter powered by Tree-sitter and Neovim themes."
keywords = ["syntax", "highlighting", "highlighter", "colouring", "tree-sitter"]
categories = ["text-processing"]
license = "MIT"
include = [
    "/build.rs",
    "/src/",
    "/vendored_parsers/tree-sitter-*/src/tree_sitter/*.h",
    "/vendored_parsers/tree-sitter-*/src/*.h",
    "/vendored_parsers/tree-sitter-*/src/*.c",
    "/vendored_parsers/tree-sitter-*/src/*.cc",
    "/vendored_parsers/tree-sitter-csv/csv/src/tree_sitter/*.h",
    "/vendored_parsers/tree-sitter-csv/csv/src/*.c",
    "/vendored_parsers/tree-sitter-comment/src/tree_sitter_comment/*.h",
    "/vendored_parsers/tree-sitter-comment/src/tree_sitter_comment/*.c",
    "/queries/README.md",
    "/queries/**/highlights.scm",
    "/queries/**/injections.scm",
    "/queries/**/locals.scm",
    "/css/*.css",
    "/themes/*.json",
    "/LICENSE",
    "/README.md",
]

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]
no-default-features = true

[[bin]]
name = "autumn"
path = "src/bin/autumn/main.rs"
doc = true

[[bin]]
name = "dev"
path = "src/bin/dev/main.rs"
required-features = ["dev"]
doc = false

[features]
dev = []
elixir-nif = ["rustler"]
default = ["all-languages", "nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]

all-languages = [
    "lang-angular",
    "lang-asm",
    "lang-astro",
    "lang-bash",
    "lang-c",
    "lang-clojure",
    "lang-cmake",
    "lang-comment",
    "lang-commonlisp",
    "lang-cpp",
    "lang-csharp",
    "lang-css",
    "lang-csv",
    "lang-dart",
    "lang-diff",
    "lang-dockerfile",
    "lang-eex",
    "lang-ejs",
    "lang-elixir",
    "lang-elm",
    "lang-erb",
    "lang-erlang",
    "lang-fsharp",
    "lang-gleam",
    "lang-glimmer",
    "lang-go",
    "lang-graphql",
    "lang-haskell",
    "lang-hcl",
    "lang-heex",
    "lang-html",
    "lang-iex",
    "lang-java",
    "lang-javascript",
    "lang-json",
    "lang-kotlin",
    "lang-latex",
    "lang-liquid",
    "lang-llvm",
    "lang-lua",
    "lang-make",
    "lang-markdown",
    "lang-nix",
    "lang-objc",
    "lang-ocaml",
    "lang-perl",
    "lang-php",
    "lang-powershell",
    "lang-protobuf",
    "lang-python",
    "lang-r",
    "lang-regex",
    "lang-ruby",
    "lang-rust",
    "lang-scala",
    "lang-scss",
    "lang-sql",
    "lang-surface",
    "lang-svelte",
    "lang-swift",
    "lang-toml",
    "lang-tsx",
    "lang-typescript",
    "lang-vim",
    "lang-vue",
    "lang-xml",
    "lang-yaml",
    "lang-zig",
]

lang-angular = []
lang-asm = ["dep:tree-sitter-asm"]
lang-astro = []
lang-bash = ["dep:tree-sitter-bash"]
lang-c = ["dep:tree-sitter-c"]
lang-clojure = []
lang-cmake = ["dep:tree-sitter-cmake"]
lang-comment = ["dep:tree-sitter-comment"]
lang-commonlisp = []
lang-cpp = ["dep:tree-sitter-cpp"]
lang-csharp = ["dep:tree-sitter-c-sharp"]
lang-css = ["dep:tree-sitter-css"]
lang-csv = []
lang-dart = []
lang-diff = []
lang-dockerfile = []
lang-eex = []
lang-ejs = ["dep:tree-sitter-embedded-template"]
lang-elixir = ["dep:tree-sitter-elixir"]
lang-elm = ["dep:tree-sitter-elm"]
lang-erb = ["dep:tree-sitter-embedded-template"]
lang-erlang = ["dep:tree-sitter-erlang"]
lang-fsharp = ["dep:tree-sitter-fsharp"]
lang-gleam = ["dep:tree-sitter-gleam"]
lang-glimmer = []
lang-go = ["dep:tree-sitter-go"]
lang-graphql = []
lang-haskell = ["dep:tree-sitter-haskell"]
lang-hcl = ["dep:tree-sitter-hcl"]
lang-heex = ["dep:tree-sitter-heex"]
lang-html = ["dep:tree-sitter-html"]
lang-iex = []
lang-java = ["dep:tree-sitter-java"]
lang-javascript = ["dep:tree-sitter-javascript"]
lang-json = ["dep:tree-sitter-json"]
lang-kotlin = []
lang-latex = []
lang-liquid = []
lang-llvm = []
lang-lua = ["dep:tree-sitter-lua"]
lang-make = []
lang-markdown = ["dep:tree-sitter-md"]
lang-nix = ["dep:tree-sitter-nix"]
lang-objc = ["dep:tree-sitter-objc"]
lang-ocaml = ["dep:tree-sitter-ocaml"]
lang-perl = []
lang-php = ["dep:tree-sitter-php"]
lang-powershell = ["dep:tree-sitter-powershell"]
lang-protobuf = ["dep:tree-sitter-proto"]
lang-python = ["dep:tree-sitter-python"]
lang-r = ["dep:tree-sitter-r"]
lang-regex = ["dep:tree-sitter-regex"]
lang-ruby = ["dep:tree-sitter-ruby"]
lang-rust = ["dep:tree-sitter-rust"]
lang-scala = ["dep:tree-sitter-scala"]
lang-scss = []
lang-sql = ["dep:tree-sitter-sequel"]
lang-surface = []
lang-svelte = ["dep:tree-sitter-svelte-ng"]
lang-swift = ["dep:tree-sitter-swift"]
lang-toml = ["dep:tree-sitter-toml-ng"]
lang-tsx = ["dep:tree-sitter-typescript"]
lang-typescript = ["dep:tree-sitter-typescript"]
lang-vim = []
lang-vue = []
lang-xml = ["dep:tree-sitter-xml"]
lang-yaml = ["dep:tree-sitter-yaml"]
lang-zig = ["dep:tree-sitter-zig"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
derive_builder = "0.20"
glob = "0.3"
lazy_static = "1.5"
regex = "1.11"
rustler = { version = "0.36", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }
termcolor = "1.4"
tree-sitter = "0.25.6"
tree-sitter-asm = { version = "0.24.0", optional = true }
tree-sitter-bash = { version = "0.25.0", optional = true }
tree-sitter-c = { version = "0.24.1", optional = true }
tree-sitter-c-sharp = { version = "0.23.1", optional = true }
tree-sitter-cmake = { version = "0.7.1", optional = true }
tree-sitter-comment = { version = "0.3.0", optional = true }
tree-sitter-cpp = { version = "0.23.4", optional = true }
tree-sitter-css = { version = "0.23.2", optional = true }
tree-sitter-diff = "0.1.0"
tree-sitter-elixir = { version = "0.3.4", optional = true }
tree-sitter-elm = { version = "5.8.0", optional = true }
tree-sitter-embedded-template = { version = "0.23.2", optional = true }
tree-sitter-erlang = { version = "0.14.0", optional = true }
tree-sitter-fsharp = { version = "0.1.0", optional = true }
tree-sitter-gleam = { version = "1.0.0", optional = true }
tree-sitter-go = { version = "0.23.4", optional = true }
tree-sitter-haskell = { version = "0.23.1", optional = true }
tree-sitter-hcl = { version = "1.1.0", optional = true }
tree-sitter-heex = { version = "0.8.1", optional = true }
tree-sitter-highlight = "0.25.6"
tree-sitter-html = { version = "0.23.2", optional = true }
tree-sitter-java = { version = "0.23.5", optional = true }
tree-sitter-javascript = { version = "0.23.1", optional = true }
tree-sitter-json = { version = "0.24.8", optional = true }
tree-sitter-language = "0.1.5"
tree-sitter-lua = { version = "0.2.0", optional = true }
tree-sitter-md = { version = "0.3.2", optional = true }
tree-sitter-nix = { version = "0.3.0", optional = true }
tree-sitter-objc = { version = "3.0.2", optional = true }
tree-sitter-ocaml = { version = "0.24.2", optional = true }
tree-sitter-php = { version = "0.23.11", optional = true }
tree-sitter-powershell = { version = "0.25.2", optional = true }
tree-sitter-proto = { version = "0.2.0", optional = true }
tree-sitter-python = { version = "0.23.6", optional = true }
tree-sitter-r = { version = "1.2.0", optional = true }
tree-sitter-regex = { version = "0.24.3", optional = true }
tree-sitter-ruby = { version = "0.23.1", optional = true }
tree-sitter-rust = { version = "0.24.0", optional = true }
tree-sitter-scala = { version = "0.24.0", optional = true }
tree-sitter-sequel = { version = "0.3.8", optional = true }
tree-sitter-svelte-ng = { version = "1.0.2", optional = true }
tree-sitter-swift = { version = "0.7.0", optional = true }
tree-sitter-toml-ng = { version = "0.7.0", optional = true }
tree-sitter-typescript = { version = "0.23.2", optional = true }
tree-sitter-xml = { version = "0.7.0", optional = true }
tree-sitter-yaml = { version = "0.7.1", optional = true }
tree-sitter-zig = { version = "1.1.2", optional = true }
v_htmlescape = "0.15"

[build-dependencies]
cc = "1"
glob = "0.3"
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
rayon = "1"
syn = { version = "2.0", features = ["full", "parsing"] }

[dev-dependencies]
pretty_assertions = "1.4"

[profile.release]
lto = true
strip = true
