[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["packages/elixir/lumis/native/lumis_nif"]

[workspace.package]
edition = "2021"
rust-version = "1.91"
license = "MIT"
repository = "https://github.com/leandrocp/lumis"
authors = ["Leandro Pereira <leandro@leandro.io>"]

[profile.release]
lto = true
strip = true
