[package]
name = "autumnus"
version = "0.9.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "DEPRECATED - Use `lumis` instead. Syntax highlighter powered by Tree-sitter."
readme = "README.md"

[dependencies]
lumis = "0.1.0"
