[package]
name = "lumis"
version = "0.1.3"
homepage = "https://lumis.sh"
repository = "https://github.com/leandrocp/lumis"
authors = ["Leandro Pereira <leandro@leandro.io>"]
edition = "2021"
rust-version = "1.91"
license = "MIT"
description = "Syntax highlighter powered by Tree-sitter and Neovim themes."
keywords = ["syntax", "highlighting", "highlighter", "colouring", "tree-sitter"]
categories = ["text-processing"]
include = [
    "/build.rs",
    "/src/",
    "/vendored_parsers/tree-sitter-*/src/tree_sitter/*.h",
    "/vendored_parsers/tree-sitter-*/src/*.h",
    "/vendored_parsers/tree-sitter-*/src/*.c",
    "/vendored_parsers/tree-sitter-*/src/*.cc",
    "/vendored_parsers/tree-sitter-csv/csv/src/tree_sitter/*.h",
    "/vendored_parsers/tree-sitter-csv/csv/src/*.c",
    "/vendored_parsers/tree-sitter-comment/src/tree_sitter_comment/*.h",
    "/vendored_parsers/tree-sitter-comment/src/tree_sitter_comment/*.c",
    "/queries/README.md",
    "/queries/**/highlights.scm",
    "/queries/**/injections.scm",
    "/queries/**/locals.scm",
    "/overwrites/",
    "/css/*.css",
    "/themes/*.json",
    "/LICENSE",
    "/README.md",
    "/CHANGELOG.md",
]

[[bin]]
name = "lumis"
path = "src/bin/lumis/main.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]
no-default-features = true

[features]
dev = []
default = ["all-languages"]

all-languages = [
    "lang-angular",
    "lang-asm",
    "lang-astro",
    "lang-bash",
    "lang-c",
    "lang-caddy",
    "lang-clojure",
    "lang-cmake",
    "lang-comment",
    "lang-commonlisp",
    "lang-cpp",
    "lang-csharp",
    "lang-css",
    "lang-csv",
    "lang-dart",
    "lang-diff",
    "lang-dockerfile",
    "lang-eex",
    "lang-ejs",
    "lang-elixir",
    "lang-elm",
    "lang-erb",
    "lang-erlang",
    "lang-fish",
    "lang-fsharp",
    "lang-gleam",
    "lang-glimmer",
    "lang-go",
    "lang-graphql",
    "lang-haskell",
    "lang-hcl",
    "lang-heex",
    "lang-html",
    "lang-iex",
    "lang-java",
    "lang-javascript",
    "lang-json",
    "lang-kotlin",
    "lang-latex",
    "lang-liquid",
    "lang-llvm",
    "lang-lua",
    "lang-make",
    "lang-markdown",
    "lang-markdown-inline",
    "lang-nix",
    "lang-nushell",
    "lang-objc",
    "lang-ocaml",
    "lang-perl",
    "lang-php",
    "lang-powershell",
    "lang-protobuf",
    "lang-python",
    "lang-r",
    "lang-regex",
    "lang-ruby",
    "lang-rust",
    "lang-scala",
    "lang-scss",
    "lang-sql",
    "lang-surface",
    "lang-svelte",
    "lang-swift",
    "lang-toml",
    "lang-tsx",
    "lang-typescript",
    "lang-typst",
    "lang-vim",
    "lang-vue",
    "lang-wat",
    "lang-xml",
    "lang-yaml",
    "lang-zig",
]

lang-angular = []
lang-asm = ["dep:tree-sitter-asm"]
lang-astro = []
lang-bash = ["dep:tree-sitter-bash"]
lang-c = ["dep:tree-sitter-c"]
lang-caddy = []
lang-clojure = []
lang-cmake = ["dep:tree-sitter-cmake"]
lang-comment = ["dep:tree-sitter-comment"]
lang-commonlisp = []
lang-cpp = ["dep:tree-sitter-cpp"]
lang-csharp = ["dep:tree-sitter-c-sharp"]
lang-css = ["dep:tree-sitter-css"]
lang-csv = []
lang-dart = []
lang-diff = []
lang-dockerfile = []
lang-eex = []
lang-ejs = ["dep:tree-sitter-embedded-template"]
lang-elixir = ["dep:tree-sitter-elixir"]
lang-elm = ["dep:tree-sitter-elm"]
lang-erb = ["dep:tree-sitter-embedded-template"]
lang-erlang = ["dep:tree-sitter-erlang"]
lang-fish = []
lang-fsharp = ["dep:tree-sitter-fsharp"]
lang-gleam = ["dep:tree-sitter-gleam"]
lang-glimmer = []
lang-go = ["dep:tree-sitter-go"]
lang-graphql = []
lang-haskell = ["dep:tree-sitter-haskell"]
lang-hcl = ["dep:tree-sitter-hcl"]
lang-heex = ["dep:tree-sitter-heex"]
lang-html = ["dep:tree-sitter-html"]
lang-iex = []
lang-java = ["dep:tree-sitter-java"]
lang-javascript = ["dep:tree-sitter-javascript"]
lang-json = ["dep:tree-sitter-json"]
lang-kotlin = []
lang-latex = []
lang-liquid = []
lang-llvm = []
lang-lua = ["dep:tree-sitter-lua"]
lang-make = []
lang-markdown = []
lang-markdown-inline = []
lang-nix = ["dep:tree-sitter-nix"]
lang-nushell = []
lang-objc = ["dep:tree-sitter-objc"]
lang-ocaml = ["dep:tree-sitter-ocaml"]
lang-perl = []
lang-php = ["dep:tree-sitter-php"]
lang-powershell = ["dep:tree-sitter-powershell"]
lang-protobuf = ["dep:tree-sitter-proto"]
lang-python = ["dep:tree-sitter-python"]
lang-r = ["dep:tree-sitter-r"]
lang-regex = ["dep:tree-sitter-regex"]
lang-ruby = ["dep:tree-sitter-ruby"]
lang-rust = ["dep:tree-sitter-rust"]
lang-scala = ["dep:tree-sitter-scala"]
lang-scss = []
lang-sql = ["dep:tree-sitter-sequel"]
lang-surface = []
lang-svelte = ["dep:tree-sitter-svelte-ng"]
lang-swift = ["dep:tree-sitter-swift"]
lang-toml = ["dep:tree-sitter-toml-ng"]
lang-tsx = ["dep:tree-sitter-typescript"]
lang-typescript = ["dep:tree-sitter-typescript"]
lang-typst = []
lang-vim = []
lang-vue = []
lang-wat = []
lang-xml = ["dep:tree-sitter-xml"]
lang-yaml = ["dep:tree-sitter-yaml"]
lang-zig = ["dep:tree-sitter-zig"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
derive_builder = "0.20"
glob = "0.3"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smol_str = "0.3"
streaming-iterator = "0.1"
strum = { version = "0.27", features = ["derive"] }
tempfile = "3.25"
termcolor = "1.4"
thiserror = "2"
tree-sitter = "0.25"
tree-sitter-asm = { version = "0.24.0", optional = true }
tree-sitter-bash = { version = "0.25.1", optional = true }
tree-sitter-c = { version = "0.24.1", optional = true }
tree-sitter-c-sharp = { version = "0.23.1", optional = true }
tree-sitter-cmake = { version = "0.7.1", optional = true }
tree-sitter-comment = { version = "0.3.0", optional = true }
tree-sitter-cpp = { version = "0.23.4", optional = true }
tree-sitter-css = { version = "0.25.0", optional = true }
tree-sitter-diff = "0.1.0"
tree-sitter-elixir = { version = "0.3.4", optional = true }
tree-sitter-elm = { version = "5.9.0", optional = true }
tree-sitter-embedded-template = { version = "0.25.0", optional = true }
tree-sitter-erlang = { version = "0.15.0", optional = true }
tree-sitter-fsharp = { version = "0.1.0", optional = true }
tree-sitter-gleam = { version = "1.0.0", optional = true }
tree-sitter-go = { version = "0.25.0", optional = true }
tree-sitter-haskell = { version = "0.23.1", optional = true }
tree-sitter-hcl = { version = "1.1.0", optional = true }
tree-sitter-heex = { version = "0.8.1", optional = true }
tree-sitter-highlight = "0.25"
tree-sitter-html = { version = "0.23.2", optional = true }
tree-sitter-java = { version = "0.23.5", optional = true }
tree-sitter-javascript = { version = "0.25.0", optional = true }
tree-sitter-json = { version = "0.24.8", optional = true }
tree-sitter-language = "0.1.7"
tree-sitter-lua = { version = "0.4.1", optional = true }
tree-sitter-nix = { version = "0.3.0", optional = true }
tree-sitter-objc = { version = "3.0.2", optional = true }
tree-sitter-ocaml = { version = "0.24.2", optional = true }
tree-sitter-php = { version = "0.24.2", optional = true }
tree-sitter-powershell = { version = "0.25.10", optional = true }
tree-sitter-proto = { version = "0.4.0", optional = true }
tree-sitter-python = { version = "0.25.0", optional = true }
tree-sitter-r = { version = "1.2.0", optional = true }
tree-sitter-regex = { version = "0.25.0", optional = true }
tree-sitter-ruby = { version = "0.23.1", optional = true }
tree-sitter-rust = { version = "0.24.0", optional = true }
tree-sitter-scala = { version = "0.24.0", optional = true }
tree-sitter-sequel = { version = "0.3.11", optional = true }
tree-sitter-svelte-ng = { version = "1.0.2", optional = true }
tree-sitter-swift = { version = "0.7.1", optional = true }
tree-sitter-toml-ng = { version = "0.7.0", optional = true }
tree-sitter-typescript = { version = "0.23.2", optional = true }
tree-sitter-xml = { version = "0.7.0", optional = true }
tree-sitter-yaml = { version = "0.7.2", optional = true }
tree-sitter-zig = { version = "1.1.2", optional = true }
v_htmlescape = "0.15"

[build-dependencies]
cc = "1"
glob = "0.3"
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
rayon = "1"
syn = { version = "2.0", features = ["full", "parsing"] }

[dev-dependencies]
pretty_assertions = "1.4"

[package.metadata.langs.parsers]
asm = { dep = true }
bash = { dep = true }
c = { dep = true }
cmake = { dep = true }
comment = { dep = true }
cpp = { dep = true }
csharp = { dep = "tree-sitter-c-sharp" }
css = { dep = true }
diff = { dep = true }
ejs = { dep = "tree-sitter-embedded-template" }
elixir = { dep = true }
elm = { dep = true }
erb = { dep = "tree-sitter-embedded-template" }
erlang = { dep = true }
fsharp = { dep = true }
gleam = { dep = true }
go = { dep = true }
haskell = { dep = true }
hcl = { dep = true }
heex = { dep = true }
html = { dep = true }
java = { dep = true }
javascript = { dep = true }
json = { dep = true }
lua = { dep = true }
nix = { dep = true }
objc = { dep = true }
ocaml = { dep = true }
php = { dep = true }
powershell = { dep = true }
protobuf = { dep = "tree-sitter-proto" }
python = { dep = true }
r = { dep = true }
regex = { dep = true }
ruby = { dep = true }
rust = { dep = true }
scala = { dep = true }
sql = { dep = "tree-sitter-sequel" }
svelte = { dep = "tree-sitter-svelte-ng" }
swift = { dep = true }
toml = { dep = "tree-sitter-toml-ng" }
tsx = { dep = "tree-sitter-typescript" }
typescript = { dep = "tree-sitter-typescript" }
xml = { dep = true }
yaml = { dep = true }
zig = { dep = true }
angular = { git = "https://github.com/dlvandenberg/tree-sitter-angular.git", rev = "f0d0685701b70883fa2dfe94ee7dc27965cab841" }
astro = { git = "https://github.com/virchau13/tree-sitter-astro.git", rev = "213f6e6973d9b456c6e50e86f19f66877e7ef0ee" }
caddy = { git = "https://github.com/opa-oz/tree-sitter-caddy.git", rev = "2686186edb61be47960431c93a204fb249681360" }
clojure = { git = "https://github.com/sogaiu/tree-sitter-clojure.git", rev = "e43eff80d17cf34852dcd92ca5e6986d23a7040f" }
commonlisp = { git = "https://github.com/tree-sitter-grammars/tree-sitter-commonlisp.git", rev = "32323509b3d9fe96607d151c2da2c9009eb13a2f" }
csv = { git = "https://github.com/tree-sitter-grammars/tree-sitter-csv.git", rev = "f6bf6e35eb0b95fbadea4bb39cb9709507fcb181", location = "csv" }
dart = { git = "https://github.com/UserNobody14/tree-sitter-dart.git", rev = "81638dbbdb76a0e88ea8c31b95ec76b9625ddb84" }
dockerfile = { git = "https://github.com/camdencheek/tree-sitter-dockerfile.git", rev = "971acdd908568b4531b0ba28a445bf0bb720aba5" }
eex = { git = "https://github.com/connorlay/tree-sitter-eex.git", rev = "f742f2fe327463335e8671a87c0b9b396905d1d1" }
fish = { git = "https://github.com/ram02z/tree-sitter-fish.git", rev = "aa074a0bacde8b5823c592574d7138f156a95776" }
glimmer = { git = "https://github.com/ember-tooling/tree-sitter-glimmer.git", rev = "88af85568bde3b91acb5d4c352ed094d0c1f9d84" }
graphql = { git = "https://github.com/bkegley/tree-sitter-graphql.git", rev = "5e66e961eee421786bdda8495ed1db045e06b5fe" }
http = { git = "https://github.com/rest-nvim/tree-sitter-http.git", rev = "db8b4398de90b6d0b6c780aba96aaa2cd8e9202c" }
iex = { git = "https://github.com/elixir-lang/tree-sitter-iex.git", rev = "39f20bb51f502e32058684e893c0c0b00bb2332c" }
kotlin = { git = "https://github.com/fwcd/tree-sitter-kotlin.git", rev = "48c964a9ddfe4387968d1b6412d7b39106fb7f39" }
latex = { git = "https://github.com/latex-lsp/tree-sitter-latex.git", rev = "7e0ecdc02926c7b9b2e0c76003d4fe7b0944f957", generate = true }
liquid = { git = "https://github.com/hankthetank27/tree-sitter-liquid.git", rev = "d6ebde3974742cd1b61b55d1d94aab1dacb41056" }
llvm = { git = "https://github.com/benwilliamgraham/tree-sitter-llvm.git", rev = "2914786ae6774d4c4e25a230f4afe16aa68fe1c1" }
make = { git = "https://github.com/tree-sitter-grammars/tree-sitter-make.git", rev = "5e9e8f8ff3387b0edcaa90f46ddf3629f4cfeb1d" }
markdown = { git = "https://github.com/tree-sitter-grammars/tree-sitter-markdown.git", rev = "cee71b8288f2ec09c29415219ac15a654bd571b9", location = "tree-sitter-markdown" }
markdown_inline = { git = "https://github.com/tree-sitter-grammars/tree-sitter-markdown.git", rev = "cee71b8288f2ec09c29415219ac15a654bd571b9", location = "tree-sitter-markdown-inline" }
nu = { git = "https://github.com/nushell/tree-sitter-nu.git", rev = "bb3f533e5792260291945e1f329e1f0a779def6e" }
perl = { git = "https://github.com/tree-sitter-perl/tree-sitter-perl.git", rev = "0c24d001dd1921e418fb933d208a7bd7dd3f923a", generate = true }
scss = { git = "https://github.com/serenadeai/tree-sitter-scss.git", rev = "c478c6868648eff49eb04a4df90d703dc45b312a" }
surface = { git = "https://github.com/connorlay/tree-sitter-surface.git", rev = "f4586b35ac8548667a9aad4eae44456c1f43d032" }
typst = { git = "https://github.com/uben0/tree-sitter-typst.git", rev = "46cf4ded12ee974a70bf8457263b67ad7ee0379d" }
vim = { git = "https://github.com/tree-sitter-grammars/tree-sitter-vim.git", rev = "1cd0a0892b389bd314a9bd09545160e5ee3c9137" }
vue = { git = "https://github.com/tree-sitter-grammars/tree-sitter-vue.git", rev = "ce8011a414fdf8091f4e4071752efc376f4afb08" }
wat = { git = "https://github.com/wasm-lsp/tree-sitter-wasm.git", rev = "2ca28a9f9d709847bf7a3de0942a84e912f59088", location = "wat" }

[package.metadata.langs.queries]
default = { git = "https://github.com/nvim-treesitter/nvim-treesitter.git", rev = "3edb01f912867603c2aef9079f208f0244c0885b", path = "runtime/queries" }
iex = { git = "https://github.com/elixir-lang/tree-sitter-iex.git", rev = "39f20bb51f502e32058684e893c0c0b00bb2332c", path = "queries" }
nix = { git = "https://github.com/nix-community/tree-sitter-nix.git", rev = "eabf96807ea4ab6d6c7f09b671a88cd483542840", path = "queries" }
nu = { git = "https://github.com/nushell/tree-sitter-nu.git", rev = "bb3f533e5792260291945e1f329e1f0a779def6e", path = "queries" }
python = { git = "https://github.com/tree-sitter/tree-sitter-python.git", rev = "26855eabccb19c6abf499fbc5b8dc7cc9ab8bc64", path = "queries" }
wat = { git = "https://github.com/helix-editor/helix.git", rev = "79c7203a388e1ac7aa6aebfc2e4c9a91b6efc97a", path = "runtime/queries/wat" }
